--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,9 +43,9 @@ jobs:
           npx sponsorkit
         env:
           SPONSORKIT_AFDIAN_TOKEN: ${{ secrets.SPONSORKIT_AFDIAN_TOKEN }}
-          SPONSORKIT_AFDIAN_USER_ID: e97ad8460df611eab74952540025c377
+          SPONSORKIT_AFDIAN_USER_ID: 5cf4ac4227c511ef8e5752540025c377
           SPONSORKIT_GITHUB_TOKEN: ${{ secrets.SPONSORKIT_GITHUB_TOKEN }}
-          SPONSORKIT_GITHUB_LOGIN: innei
+          SPONSORKIT_GITHUB_LOGIN: notquiteleo
       - name: Push new README.md
         uses: mikeal/publish-to-github-action@master
         env:
